--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "vite preview --entry src/main.jsx"
+    "start": "vite build && vite preview"
   },
   "dependencies": {
     "axios": "^1.6.2",
